--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,6 +34,7 @@ allprojects {
         }
 
         google()
+        maven { url "https://maven.google.com" }
         jcenter()
         maven { url 'https://www.jitpack.io' }
     }
