--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.1.0",
@@ -22,6 +23,12 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^3.3.0",
+    "@tensorflow/tfjs-converter": "^3.8.0",
+    "@tensorflow/tfjs-core": "^3.8.0",
+    "@tensorflow/tfjs-react-native": "^0.6.0",
+    "expo-file-system": "^11.1.3",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-native": "0.64.1",
@@ -35,8 +42,10 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-share": "^6.4.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^12.1.1",
+    "react-native-unimodules": "^0.14.6",
     "react-native-vector-icons": "^8.1.0",
     "rn-fetch-blob": "^0.12.0",
     "rn-range-slider": "^2.1.1",
