--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@tensorflow-models/mobilenet": "^2.1.0",
-    "@tensorflow/tfjs": "^3.3.0",
-    "@tensorflow/tfjs-converter": "^3.8.0",
-    "@tensorflow/tfjs-core": "^3.8.0",
     "@tensorflow/tfjs-react-native": "^0.6.0",
+    "atob": "^2.1.2",
+    "expo-camera": "^11.2.2",
     "expo-file-system": "^11.1.3",
+    "expo-gl": "^10.4.2",
+    "expo-gl-cpp": "^10.4.1",
+    "jpeg-js": "^0.4.3",
     "lodash": "^4.17.21",
+    "node-blob": "^0.0.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-camera": "^4.1.0",
