--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "buffer": "^6.0.3",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-native": "0.64.1",
