--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/nightmare": "^2.10.5",
     "buffer": "^6.0.3",
+    "child_process": "^1.0.2",
+    "free-translate": "^0.4.0",
     "lodash": "^4.17.21",
+    "nightmare": "^3.0.2",
+    "path": "^0.12.7",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-camera": "^4.1.0",
